--- a/_config.yml
+++ b/_config.yml
@@ -6,11 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: The Auburn Network
-email: your-email@domain.com
-description:  Write an awesome description for your new site here. You can edit this
-              line in _config.yml. It will appear in your document head meta (for
-              Google search results) and in your feed.xml site description.
+title: The Auburn Sports Network
+email: Call - (404)926-6235
+description:  This is your chance to weigh in on Auburn Sports, call the number above and leave a message on the topics below. If your message is picked well post them along with the relies. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://Auburn.Network" # the base hostname & protocol for your site
 twitter_username: jekyllrb
