--- a/_config.yml
+++ b/_config.yml
@@ -7,8 +7,8 @@
 
 # Site settings
 title: The Auburn Sports Network
-email: Call - (404)926-6235
-description:  This is your chance to weigh in on Auburn Sports, call the number above and leave a message on the topics below. If your message is picked well post them along with the relies. 
+email: Call - (404) 926-6235
+description:  This is your chance to weigh in on Auburn Sports, call the number above and leave a message on the topics below. If your message is picked well post them along with the replies.Nothing abusive but otherwise it will be no holds bared!!! 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://Auburn.Network" # the base hostname & protocol for your site
 twitter_username: jekyllrb
