--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: The Auburn Sports Call-in Network
 email: 404-926-6235
 description:  This is your chance to weigh in on Auburn Sports, call the number above and leave a message on the topics below. If your message is picked well post them along with the replies. Nothing abusive but otherwise it will be no holds bared!!! 
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://Auburn.Network" # the base hostname & protocol for your site
+url: "http://vanderbiltsports.github" # the base hostname & protocol for your site
 twitter_username: jekyllrb
 github_username:  jekyll
 
